# profane-geometry

./: .gitignore  LICENSE.md  README.md
firmware/: Cargo.toml
firmware/profane_geometry/: .gdbinit  Cargo.toml
firmware/profane_geometry/.cargo/: config
firmware/profane_geometry/src/: hw.rs  main.rs  mcu.rs
firmware/profane_geometry/src/mcu/: adc.rs
firmware/profane_geometry_bsp/: Cargo.toml  memory.x
firmware/profane_geometry_bsp/.cargo/: config
firmware/profane_geometry_bsp/src/: lib.rs
firmware/src/: dac.rs  main.rs  utils.rs
firmware/src/hw/: mcp4728.rs
firmware/src/mcu/: adc.rs  calibration.rs
profane_geometry/: fp-info-cache  fp-lib-table  geo_core.sch  inputs.sch  mcu.sch  mixer.sch  power.sch  profane_geometry-cache.lib  profane_geometry.kicad_pcb  profane_geometry.pro  profane_geometry.sch
profane_geometry/profane_geometry.pretty/: zzzzzzzz_back_soldermask.kicad_mod  zzzzzzzz_new_front_soldermask.kicad_mod
profane_geometry_jackboard/: fp-info-cache  fp-lib-table  profane_geometry_jackboard-cache.lib  profane_geometry_jackboard.kicad_pcb  profane_geometry_jackboard.pro  profane_geometry_jackboard.sch
profane_geometry_jackboard/profane_geometry_jackboard.pretty/: Adafruit_Feather_M0_Express.kicad_mod  Jack_3.5mm_QingPu_WQP-PJ301BM_Vertical.kicad_mod  Molex_02x08_2.54mm_Shrouded_Keyed.kicad_mod  Slider_Potentiometer_Bourns_PTL_30mm.kicad_mod  zzzzzzzz_new.kicad_mod
