[package]
name = "feather_tests"
version = "0.1.0"
authors = ["Zachary Hart <zthart96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
feather_m0 = {version = "0.9", features = ["unproven", "express"]}
atsamd21g = {version = "0.9", features = ["rt"]}
atsamd-hal = "0.12"
panic-halt = "0.2"
cortex-m = "0.7"
cortex-m-rt = "0.6"
micromath = "1.1"
embedded-hal = "0.2"
