[package]
name = "feather_tests"
version = "0.1.0"
authors = ["Zachary Hart <zthart96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
profane_geometry_bsp = { path = "../profane_geometry_bsp", features = ["unproven"]}
atsamd21g = {version = "0.11", features = ["rt"]}
atsamd-hal = {version = "0.13", features = ["samd21", "min-samd21g"]}
panic-halt = "0.2"
cortex-m = "0.6"
cortex-m-rt = "0.6"
micromath = "1.1"
embedded-hal = "0.2"
