[package]
name = "profane_geometry_bsp"
version = "0.1.0"
authors = ["Zach Hart <zthart96@gmail.com>"]
description = "Board Support crate for the Profane Geometry eurorack module"
edition = "2018"

[dependencies.cortex-m-rt]
version = "0.6"
optional = true

[dependencies.atsamd-hal]
version = "0.13"
default-features = false

[dev-dependencies]
cortex-m = "0.7"
cortex-m-semihosting = "0.3"
heapless = "0.5"
panic-halt = "0.2"
panic-semihosting = "0.5"

[features]
# ask the HAL to enable atsamd21g support
default = ["rt", "atsamd-hal/samd21g"]
rt = ["cortex-m-rt", "atsamd-hal/samd21g-rt"]
unproven = ["atsamd-hal/unproven"]
use_semihosting = []

[package.metadata]
chip = "ATSAMD21G18A"

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = false

[profile.release]
debug = true
lto = true
opt-level = "s"
